--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -10,8 +10,38 @@
 </head>
 
 <body>
-  <h1>hi</h1>
+  <h1>Gifts for the holidays!</h1>
+  <div id="buttons">
+
+    <button class="btn">$0 - $10</button>
+
+    <button class="btn">$10 - $20</button>
+
+    <button class="btn">$20 - $30</button>
+
+    <button class="btn">$30 - $40</button>
+
+    <button class="btn">$40 - $50</button>
+
+  </div>
+
+  <div class="objects">
+
+    <div class="object">Shirt</div>
+    <div class="object">Watch</div>
+    <div class="object">Stuffed Animals</div>
+    <div class="object">Makeup</div>
+    <div class="object">Headphones</div>
+    <div class="object">Speaker</div>
+    <div class="object">Fuzzy Socks</div>
+    <div class="object">Book</div>
+    <div class="object">Accesories</div>
+
+  </div>
+
+
   <script src="./index.js"></script>
 </body>
+
 
 </html>
