--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -4,43 +4,56 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Document</title>
   <script src="./style.css"></script>
 
 </head>
 
 <body>
-  <h1>Gifts for the holidays!</h1>
+  <h1>Pick a fruit!</h1>
   <div id="buttons">
 
-    <button class="btn">$0 - $10</button>
+    <button class="btn">All</button>
+    <button class="btn">Red</button>
+    <button class="btn">Orange</button>
+    <button class="btn">Yellow</button>
+    <button class="btn">Green</button>
+    <button class="btn">Blue</button>
+    <button class="btn">Purple</button>
 
-    <button class="btn">$10 - $20</button>
-
-    <button class="btn">$20 - $30</button>
-
-    <button class="btn">$30 - $40</button>
-
-    <button class="btn">$40 - $50</button>
 
   </div>
+
+  <ul>
+    <li>
+      p
+    </li>
+  </ul>
 
   <div class="objects">
 
-    <div class="object">Shirt</div>
-    <div class="object">Watch</div>
-    <div class="object">Stuffed Animals</div>
-    <div class="object">Makeup</div>
-    <div class="object">Headphones</div>
-    <div class="object">Speaker</div>
-    <div class="object">Fuzzy Socks</div>
-    <div class="object">Book</div>
-    <div class="object">Accesories</div>
+    <div class="object">Apple</div>
+    <div class="object">Banana</div>
+    <div class="object">Orange</div>
+    <div class="object">Honeydew</div>
+    <div class="object">Blueberries</div>
+    <div class="object">Grapes</div>
+    <div class="object">Cucumber</div>
+    <div class="object">Strawberry</div>
+    <div class="object">Grape Fruit</div>
+    <div class="object">Pineapple</div>
+    <div class="object">Watermelon</div>
+    <div class="object">Kiwi</div>
+    <div class="object">Papaya</div>
+    <div class="object">Mango</div>
+    <div class="object">Blackberries</div>
+
 
   </div>
 
 
-  <script src="./index.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 
