--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -33,13 +33,13 @@
 
   <div class="objects">
 
-    <div class="object">Apple</div>
+    <div class="object">Apple <img src="Apple.jpg" alt="apples"></div>
     <div class="object">Banana</div>
     <div class="object">Orange</div>
     <div class="object">Honeydew</div>
     <div class="object">Blueberries</div>
     <div class="object">Grapes</div>
-    <div class="object">Cucumber</div>
+    <!-- <div class="object">Cucumber</div>
     <div class="object">Strawberry</div>
     <div class="object">Grape Fruit</div>
     <div class="object">Pineapple</div>
@@ -47,7 +47,7 @@
     <div class="object">Kiwi</div>
     <div class="object">Papaya</div>
     <div class="object">Mango</div>
-    <div class="object">Blackberries</div>
+    <div class="object">Blackberries</div> -->
 
 
   </div>
