--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -31,7 +31,7 @@
     </li>
   </ul>
 
-  <div class="objects">
+  <div id="objects">
 
     <div class="object">Apple <img src="Apple.jpg" alt="apples"></div>
     <div class="object">Banana</div>
