--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Document</title>
-  <script src="./style.css"></script>
+  <script src="./styles.css"></script>
 
 </head>
 
@@ -33,12 +33,12 @@
 
   <div id="objects">
 
-    <div class="object">Apple <img src="Apple.jpg" alt="apples"></div>
-    <div class="object">Banana</div>
-    <div class="object">Orange</div>
-    <div class="object">Honeydew</div>
-    <div class="object">Blueberries</div>
-    <div class="object">Grapes</div>
+    <div class="object">Apple <img class="fruit" src="Apple.jpg" alt="apples"></div>
+    <div class="object">Banana <img class="fruit" src="Banana.jpg" alt="banana"></div>
+    <div class="object">Orange <img class="fruit" src="Orange.jpg" alt="oranges"></div>
+    <div class="object">Honeydew <img class="fruit" src="Honeydew.jpg" alt="Honeydew"></div>
+    <div class="object">Blueberries <img class="fruit" src="Blueberry.jpg" alt="blueberries"></div>
+    <div class="object">Grapes <img class="fruit" src="Grape.jpg" alt="grapes"></div>
     <!-- <div class="object">Cucumber</div>
     <div class="object">Strawberry</div>
     <div class="object">Grape Fruit</div>
