--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Document</title>
-  <script src="./styles.css"></script>
 
 </head>
+<link rel="stylesheet" href="styles.css">
 
 <body>
   <h1>Pick a fruit!</h1>
@@ -39,16 +39,6 @@
     <div class="object">Honeydew <img class="fruit" src="Honeydew.jpg" alt="Honeydew"></div>
     <div class="object">Blueberries <img class="fruit" src="Blueberry.jpg" alt="blueberries"></div>
     <div class="object">Grapes <img class="fruit" src="Grape.jpg" alt="grapes"></div>
-    <!-- <div class="object">Cucumber</div>
-    <div class="object">Strawberry</div>
-    <div class="object">Grape Fruit</div>
-    <div class="object">Pineapple</div>
-    <div class="object">Watermelon</div>
-    <div class="object">Kiwi</div>
-    <div class="object">Papaya</div>
-    <div class="object">Mango</div>
-    <div class="object">Blackberries</div> -->
-
 
   </div>
 
