--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Document</title>
-  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body class="light">
@@ -47,6 +46,8 @@
     </div><br>
   </div>
   <div id="products"></div>
+  <script type="module" src="./js/main.js"></script>
+
 </body>
 
 </html>
