--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -40,9 +40,9 @@
       <button type="submit" class="typeSelectors" id="purple">Purple</button>
     </div></br>
     <div class="popularity" id="popularBtn">
-      <p class="btnLabel">Filter by Popularity:</p>
-      <button type="submit" class="popularSelectors" id="popularLeastMost">Least to Most</button>
-      <button type="submit" class="popularSelectors" id="popularMostLeast">Most to Least</button>
+      <p class="btnLabel">Filter by Price:</p>
+      <button type="submit" class="priceSelectors" id="priceLeastMost">Least to Most</button>
+      <button type="submit" class="priceSelectors" id="priceMostLeast">Most to Least</button>
     </div><br>
   </div>
   <div id="products"></div>
