--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -15,7 +15,7 @@
 
     <div class="top"></div>
 
-    <h1 class="main">Purchase a Fruit!</h1>
+    <h1 class="main">Fresh Fruits For Sale!</h1>
 
     <!-- change themeBtn into toggle later -->
     <div id="themeBtn">
@@ -40,9 +40,9 @@
       <button type="submit" class="typeSelectors" id="purple">Purple</button>
     </div></br>
     <div class="popularity" id="popularBtn">
-      <p class="btnLabel">Filter by Price:</p>
-      <button type="submit" class="priceSelectors" id="priceLeastMost">Least to Most</button>
-      <button type="submit" class="priceSelectors" id="priceMostLeast">Most to Least</button>
+      <p class="btnLabel">Filter by Amount:</p>
+      <button type="submit" class="single" id="notBulk">Single</button>
+      <button type="submit" class="bulk" id="bulk">Bulk</button>
     </div><br>
   </div>
   <div id="products"></div>
