--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,7 +9,7 @@
   <title>Document</title>
 </head>
 
-<body class="light">
+<body class="dark">
 
   <div class="container">
 
@@ -44,12 +44,14 @@
       <button type="submit" class="single" id="notBulk">Single</button>
       <button type="submit" class="bulk" id="bulk">Bulk</button>
     </div><br>
-  </div>
-  <div id="products"></div>
+    <div id="products"></div>
 
-  <div>
-    <div id="output"></div>
+    <div>
+      <div id="output"></div>
+    </div>
+
   </div>
+
   <script type="module" src="./js/main.js"></script>
 
 </body>
